# qa-factory

./: CMakeLists.txt  README.md  qalgebra.cpp  qalgebra.hpp
include/: performance.hpp
scripts/: all.sh
src/: performance.cpp
tests/: main.cpp  my_call.cpp  my_call.hpp
